# agent-harness

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  ARCHITECTURE.md  Dockerfile  README.md  WORKFLOW.example.md  WORKFLOW.md  codex_trial.py  docker-compose.yml  pyproject.toml
.github/agents/: cortex-worker.agent.md  maestro-worker.agent.md
.github/workflows/: ci.yml
cortex/: __init__.py  __main__.py  asgi.py  audit.py  auth.py  board.py  chat.py  config.py  constants.py  context.py  conversation.py  entropy.py  main.py  mcp_server.py  middleware.py  models.py  orchestrator.py  pipeline.py  planner.py  policy.py  quality.py  runner.py  runner_pool.py  watcher.py  web.py  workspace.py
frontend/: .dockerignore  AI_SDLC_Market_Analysis.md  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
maestro/: __init__.py  __main__.py  asgi.py  audit.py  auth.py  board.py  chat.py  config.py  constants.py  context.py  conversation.py  entropy.py  main.py  mcp_client.py  middleware.py  models.py  orchestrator.py  pipeline.py  planner.py  policy.py  quality.py  runner.py  runner_pool.py  secrets.py  watcher.py  web.py  workspace.py
static/: board.css  board.html  board.js  chat.css  chat.js
tests/: conftest.py  test_audit.py  test_auth.py  test_board.py  test_chat.py  test_config.py  test_mcp_client.py  test_mcp_server.py  test_middleware.py  test_orchestrator.py  test_pipeline.py  test_planner.py  test_policy.py  test_runner.py  test_runner_pool.py  test_secrets.py  test_watcher.py  test_web.py  test_workspace.py
(+52 files in other folders)
